--- a/.gitignore
+++ b/.gitignore
@@ -3,17 +3,16 @@
 # dependencies
 /node_modules
 /.pnp
-<<<<<<< HEAD
 .pnp.*
+.pnp.js
+
+# Yarn
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-=======
-.pnp.js
 .yarn/install-state.gz
->>>>>>> e0dc322c62330917ba1f03f5464ccd9992454974
 
 # testing
 /coverage
@@ -33,16 +32,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-<<<<<<< HEAD
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
-=======
-
-# local env files
-.env*.local
->>>>>>> e0dc322c62330917ba1f03f5464ccd9992454974
+/.env*
+/.env*.local
 
 # vercel
 .vercel
