--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-<<<<<<< HEAD
   "name": "smartmock",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-=======
-  "name": "ai-interview-mocker",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
     "dev": "next dev",
->>>>>>> e0dc322c62330917ba1f03f5464ccd9992454974
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -19,7 +11,6 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@clerk/nextjs": "^6.17.0",
     "@google/generative-ai": "^0.24.0",
     "@neondatabase/serverless": "^1.0.0",
@@ -28,7 +19,6 @@
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
-    "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
@@ -45,7 +35,6 @@
     "react-text-to-speech": "^0.19.3",
     "react-use": "^17.6.0",
     "react-webcam": "^7.2.0",
-    "smartmock": "file:",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8",
@@ -54,39 +43,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.12",
+    "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4.1.4"
-=======
-    "@clerk/nextjs": "^5.1.3",
-    "@google/generative-ai": "^0.12.0",
-    "@neondatabase/serverless": "^0.9.3",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-slot": "^1.0.2",
-    "ai-interview-mocker": "file:",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.31.0",
-    "lucide-react": "^0.383.0",
-    "moment": "^2.30.1",
-    "next": "14.2.3",
-    "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-speech-to-text": "^0.8.0",
-    "react-webcam": "^7.2.0",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "drizzle-kit": "^0.22.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
->>>>>>> e0dc322c62330917ba1f03f5464ccd9992454974
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12"
   }
 }
